// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppListingTab should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.p
        classname="mock-css."
      >
        The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to submit your app for approval, it all needs to be completed.
      </mock-styled.p>
      <mock-styled.p
        classname="mock-css. mock-css."
      >
        For information on listing your app 
        <a>
          see here
        </a>
        . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
         
        <a>
          here.
        </a>
      </mock-styled.p>
      <mock-styled.div
        classname="mock-css."
      >
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="name"
              placeholder="The name of your app as it will appear to users"
              type="text"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Name
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="supportEmail"
              placeholder="Email for customers to contact you"
              type="email"
              value="Mock field value"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Support email
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="telephone"
              placeholder="Number for customers to contact you"
              type="text"
              value="Mock field value"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Telephone
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="homePage"
              placeholder="Your company homepage. HTTP:// or HTTPS://"
              type="text"
              value="Mock field value"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Home page
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="launchUri"
              placeholder="HTTPS or HTTP only for localhost"
              type="text"
              value="Mock field value"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Launch URI
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="termsAndConditionsUrl"
              placeholder="URL to link to your Terms and Conditions"
              type="text"
              value="Mock field value"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Terms and Conditions
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="privacyPolicyUrl"
              placeholder="URL to link to your Privacy Policy"
              type="text"
              value="Mock field value"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Privacy Policy
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="videoUrl1"
              placeholder="YouTube embed preferred or any https hosted video"
              type="text"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Getting Started Video URL
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="videoUrl2"
              placeholder="YouTube embed preferred or any https hosted video"
              type="text"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Why Use Us Video URL
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="pricingUrl"
              placeholder="URL to link to your Pricing Info"
              type="text"
              value="Mock field value"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Pricing Info
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="isFree"
              type="checkbox"
              value="Mock field value"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              This application is free
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="deletionProtection"
              type="checkbox"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Check to prevent app from being deleted
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              App Categories
            </mock-styled.label>
            <mock-styled.div>
              <mock-styled.input
                id="app-edit-categories-select"
                value="Mock field value"
              />
              <mock-styled.div
                classname=""
              >
                <mock-styled.span
                  classname="mock-css.
  margin-left: 0.375rem;
 mock-css. mock-css.
  font-size: 1.5rem;
"
                >
                  <svg />
                </mock-styled.span>
                <p>
                  Please select one or more categories that best describes your app. These will be used by customers to find your app in the AppMarket
                </p>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.input
                  id="test-static-id"
                  type="checkbox"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="test-static-id"
                >
                  MOCK_DESCRIPTION
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="summary"
              placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
              value="Mock field value"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Summary
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            Description
          </mock-styled.label>
          <div />
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Upload Icon Image
            </mock-styled.label>
            <mock-styled.div
              classname="mock-css.
  align-items: center;
"
            >
              <mock-styled.button
                classname="mock-css.
  margin-right: 0.625rem;
 mock-css."
                type="button"
              >
                <mock-styled.div />
                Upload
              </mock-styled.button>
              <mock-styled.input
                type="file"
              />
              <mock-styled.input
                filename="MOCK_UUID"
                id="test-static-id"
                value=""
              />
              <mock-styled.p
                classname="mock-css. mock-css."
              >
                Dimensions: 192px x 192px
              </mock-styled.p>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Upload Featured Image
            </mock-styled.label>
            <mock-styled.div
              classname="mock-css.
  align-items: center;
"
            >
              <mock-styled.button
                classname="mock-css.
  margin-right: 0.625rem;
 mock-css."
                type="button"
              >
                <mock-styled.div />
                Upload
              </mock-styled.button>
              <mock-styled.input
                type="file"
              />
              <mock-styled.input
                filename="MOCK_UUID"
                id="test-static-id"
                value=""
              />
              <mock-styled.p
                classname="mock-css. mock-css."
              >
                Dimensions: 990px x 444px
              </mock-styled.p>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Upload Other Listing Image
            </mock-styled.label>
            <mock-styled.div
              classname="mock-css.
  align-items: center;
"
            >
              <mock-styled.button
                classname="mock-css.
  margin-right: 0.625rem;
 mock-css."
                type="button"
              >
                <mock-styled.div />
                Upload
              </mock-styled.button>
              <mock-styled.input
                type="file"
              />
              <mock-styled.input
                filename="MOCK_UUID"
                id="test-static-id"
                value=""
              />
              <mock-styled.p
                classname="mock-css. mock-css."
              >
                Dimensions: 1196x x 914px
              </mock-styled.p>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Upload Other Listing Image
            </mock-styled.label>
            <mock-styled.div
              classname="mock-css.
  align-items: center;
"
            >
              <mock-styled.button
                classname="mock-css.
  margin-right: 0.625rem;
 mock-css."
                type="button"
              >
                <mock-styled.div />
                Upload
              </mock-styled.button>
              <mock-styled.input
                type="file"
              />
              <mock-styled.input
                filename="MOCK_UUID"
                id="test-static-id"
                value=""
              />
              <mock-styled.p
                classname="mock-css. mock-css."
              >
                Dimensions: 1196x x 914px
              </mock-styled.p>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Upload Other Listing Image
            </mock-styled.label>
            <mock-styled.div
              classname="mock-css.
  align-items: center;
"
            >
              <mock-styled.button
                classname="mock-css.
  margin-right: 0.625rem;
 mock-css."
                type="button"
              >
                <mock-styled.div />
                Upload
              </mock-styled.button>
              <mock-styled.input
                type="file"
              />
              <mock-styled.input
                filename="MOCK_UUID"
                id="test-static-id"
                value=""
              />
              <mock-styled.p
                classname="mock-css. mock-css."
              >
                Dimensions: 1196x x 914px
              </mock-styled.p>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Upload Other Listing Image
            </mock-styled.label>
            <mock-styled.div
              classname="mock-css.
  align-items: center;
"
            >
              <mock-styled.button
                classname="mock-css.
  margin-right: 0.625rem;
 mock-css."
                type="button"
              >
                <mock-styled.div />
                Upload
              </mock-styled.button>
              <mock-styled.input
                type="file"
              />
              <mock-styled.input
                filename="MOCK_UUID"
                id="test-static-id"
                value=""
              />
              <mock-styled.p
                classname="mock-css. mock-css."
              >
                Dimensions: 1196x x 914px
              </mock-styled.p>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.p
      classname="mock-css."
    >
      The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to submit your app for approval, it all needs to be completed.
    </mock-styled.p>
    <mock-styled.p
      classname="mock-css. mock-css."
    >
      For information on listing your app 
      <a>
        see here
      </a>
      . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
       
      <a>
        here.
      </a>
    </mock-styled.p>
    <mock-styled.div
      classname="mock-css."
    >
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname=""
            id="test-static-id"
            name="name"
            placeholder="The name of your app as it will appear to users"
            type="text"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Name
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname=""
            id="test-static-id"
            name="supportEmail"
            placeholder="Email for customers to contact you"
            type="email"
            value="Mock field value"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Support email
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname=""
            id="test-static-id"
            name="telephone"
            placeholder="Number for customers to contact you"
            type="text"
            value="Mock field value"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Telephone
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname=""
            id="test-static-id"
            name="homePage"
            placeholder="Your company homepage. HTTP:// or HTTPS://"
            type="text"
            value="Mock field value"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Home page
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname=""
            id="test-static-id"
            name="launchUri"
            placeholder="HTTPS or HTTP only for localhost"
            type="text"
            value="Mock field value"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Launch URI
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname=""
            id="test-static-id"
            name="termsAndConditionsUrl"
            placeholder="URL to link to your Terms and Conditions"
            type="text"
            value="Mock field value"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Terms and Conditions
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname=""
            id="test-static-id"
            name="privacyPolicyUrl"
            placeholder="URL to link to your Privacy Policy"
            type="text"
            value="Mock field value"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Privacy Policy
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname=""
            id="test-static-id"
            name="videoUrl1"
            placeholder="YouTube embed preferred or any https hosted video"
            type="text"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Getting Started Video URL
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname=""
            id="test-static-id"
            name="videoUrl2"
            placeholder="YouTube embed preferred or any https hosted video"
            type="text"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Why Use Us Video URL
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname=""
            id="test-static-id"
            name="pricingUrl"
            placeholder="URL to link to your Pricing Info"
            type="text"
            value="Mock field value"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Pricing Info
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname=""
            id="test-static-id"
            name="isFree"
            type="checkbox"
            value="Mock field value"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            This application is free
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname=""
            id="test-static-id"
            name="deletionProtection"
            type="checkbox"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Check to prevent app from being deleted
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            App Categories
          </mock-styled.label>
          <mock-styled.div>
            <mock-styled.input
              id="app-edit-categories-select"
              value="Mock field value"
            />
            <mock-styled.div
              classname=""
            >
              <mock-styled.span
                classname="mock-css.
  margin-left: 0.375rem;
 mock-css. mock-css.
  font-size: 1.5rem;
"
              >
                <svg />
              </mock-styled.span>
              <p>
                Please select one or more categories that best describes your app. These will be used by customers to find your app in the AppMarket
              </p>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.input
                id="test-static-id"
                type="checkbox"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="test-static-id"
              >
                MOCK_DESCRIPTION
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname=""
            id="test-static-id"
            name="summary"
            placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
            value="Mock field value"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Summary
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.label>
          Description
        </mock-styled.label>
        <div />
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            Upload Icon Image
          </mock-styled.label>
          <mock-styled.div
            classname="mock-css.
  align-items: center;
"
          >
            <mock-styled.button
              classname="mock-css.
  margin-right: 0.625rem;
 mock-css."
              type="button"
            >
              <mock-styled.div />
              Upload
            </mock-styled.button>
            <mock-styled.input
              type="file"
            />
            <mock-styled.input
              filename="MOCK_UUID"
              id="test-static-id"
              value=""
            />
            <mock-styled.p
              classname="mock-css. mock-css."
            >
              Dimensions: 192px x 192px
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            Upload Featured Image
          </mock-styled.label>
          <mock-styled.div
            classname="mock-css.
  align-items: center;
"
          >
            <mock-styled.button
              classname="mock-css.
  margin-right: 0.625rem;
 mock-css."
              type="button"
            >
              <mock-styled.div />
              Upload
            </mock-styled.button>
            <mock-styled.input
              type="file"
            />
            <mock-styled.input
              filename="MOCK_UUID"
              id="test-static-id"
              value=""
            />
            <mock-styled.p
              classname="mock-css. mock-css."
            >
              Dimensions: 990px x 444px
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            Upload Other Listing Image
          </mock-styled.label>
          <mock-styled.div
            classname="mock-css.
  align-items: center;
"
          >
            <mock-styled.button
              classname="mock-css.
  margin-right: 0.625rem;
 mock-css."
              type="button"
            >
              <mock-styled.div />
              Upload
            </mock-styled.button>
            <mock-styled.input
              type="file"
            />
            <mock-styled.input
              filename="MOCK_UUID"
              id="test-static-id"
              value=""
            />
            <mock-styled.p
              classname="mock-css. mock-css."
            >
              Dimensions: 1196x x 914px
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            Upload Other Listing Image
          </mock-styled.label>
          <mock-styled.div
            classname="mock-css.
  align-items: center;
"
          >
            <mock-styled.button
              classname="mock-css.
  margin-right: 0.625rem;
 mock-css."
              type="button"
            >
              <mock-styled.div />
              Upload
            </mock-styled.button>
            <mock-styled.input
              type="file"
            />
            <mock-styled.input
              filename="MOCK_UUID"
              id="test-static-id"
              value=""
            />
            <mock-styled.p
              classname="mock-css. mock-css."
            >
              Dimensions: 1196x x 914px
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            Upload Other Listing Image
          </mock-styled.label>
          <mock-styled.div
            classname="mock-css.
  align-items: center;
"
          >
            <mock-styled.button
              classname="mock-css.
  margin-right: 0.625rem;
 mock-css."
              type="button"
            >
              <mock-styled.div />
              Upload
            </mock-styled.button>
            <mock-styled.input
              type="file"
            />
            <mock-styled.input
              filename="MOCK_UUID"
              id="test-static-id"
              value=""
            />
            <mock-styled.p
              classname="mock-css. mock-css."
            >
              Dimensions: 1196x x 914px
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            Upload Other Listing Image
          </mock-styled.label>
          <mock-styled.div
            classname="mock-css.
  align-items: center;
"
          >
            <mock-styled.button
              classname="mock-css.
  margin-right: 0.625rem;
 mock-css."
              type="button"
            >
              <mock-styled.div />
              Upload
            </mock-styled.button>
            <mock-styled.input
              type="file"
            />
            <mock-styled.input
              filename="MOCK_UUID"
              id="test-static-id"
              value=""
            />
            <mock-styled.p
              classname="mock-css. mock-css."
            >
              Dimensions: 1196x x 914px
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppListingTab should match a snapshot with errors and messages 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.p
        classname="mock-css."
      >
        The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to submit your app for approval, it all needs to be completed.
      </mock-styled.p>
      <mock-styled.p
        classname="mock-css. mock-css."
      >
        For information on listing your app 
        <a>
          see here
        </a>
        . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
         
        <a>
          here.
        </a>
      </mock-styled.p>
      <mock-styled.div
        classname="mock-css."
      >
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="name"
              placeholder="The name of your app as it will appear to users"
              type="text"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Name
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname="mock-css."
              id="test-static-id"
              name="supportEmail"
              placeholder="Email for customers to contact you"
              type="email"
            />
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.5rem;
"
              style="font-size: 1rem;"
            >
              <svg
                style="font-size: 1rem;"
              />
            </mock-styled.span>
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Support email
            </mock-styled.label>
            <mock-styled.p>
              An Error
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname="mock-css."
              id="test-static-id"
              name="telephone"
              placeholder="Number for customers to contact you"
              type="text"
            />
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.5rem;
"
              style="font-size: 1rem;"
            >
              <svg
                style="font-size: 1rem;"
              />
            </mock-styled.span>
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Telephone
            </mock-styled.label>
            <mock-styled.p>
              An Error
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname="mock-css."
              id="test-static-id"
              name="homePage"
              placeholder="Your company homepage. HTTP:// or HTTPS://"
              type="text"
            />
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.5rem;
"
              style="font-size: 1rem;"
            >
              <svg
                style="font-size: 1rem;"
              />
            </mock-styled.span>
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Home page
            </mock-styled.label>
            <mock-styled.p>
              An Error
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname="mock-css."
              id="test-static-id"
              name="launchUri"
              placeholder="HTTPS or HTTP only for localhost"
              type="text"
            />
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.5rem;
"
              style="font-size: 1rem;"
            >
              <svg
                style="font-size: 1rem;"
              />
            </mock-styled.span>
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Launch URI
            </mock-styled.label>
            <mock-styled.p>
              An Error
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname="mock-css."
              id="test-static-id"
              name="termsAndConditionsUrl"
              placeholder="URL to link to your Terms and Conditions"
              type="text"
            />
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.5rem;
"
              style="font-size: 1rem;"
            >
              <svg
                style="font-size: 1rem;"
              />
            </mock-styled.span>
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Terms and Conditions
            </mock-styled.label>
            <mock-styled.p>
              An Error
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname="mock-css."
              id="test-static-id"
              name="privacyPolicyUrl"
              placeholder="URL to link to your Privacy Policy"
              type="text"
            />
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.5rem;
"
              style="font-size: 1rem;"
            >
              <svg
                style="font-size: 1rem;"
              />
            </mock-styled.span>
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Privacy Policy
            </mock-styled.label>
            <mock-styled.p>
              An Error
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="videoUrl1"
              placeholder="YouTube embed preferred or any https hosted video"
              type="text"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Getting Started Video URL
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="videoUrl2"
              placeholder="YouTube embed preferred or any https hosted video"
              type="text"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Why Use Us Video URL
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname="mock-css."
              id="test-static-id"
              name="pricingUrl"
              placeholder="URL to link to your Pricing Info"
              type="text"
            />
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.5rem;
"
              style="font-size: 1rem;"
            >
              <svg
                style="font-size: 1rem;"
              />
            </mock-styled.span>
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Pricing Info
            </mock-styled.label>
            <mock-styled.p>
              An Error
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname="mock-css."
              id="test-static-id"
              name="isFree"
              type="checkbox"
            />
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.5rem;
"
              style="font-size: 1rem;"
            >
              <svg
                style="font-size: 1rem;"
              />
            </mock-styled.span>
            <mock-styled.label
              htmlfor="test-static-id"
            >
              This application is free
            </mock-styled.label>
            <mock-styled.p>
              An Error
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="deletionProtection"
              type="checkbox"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Check to prevent app from being deleted
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              App Categories
            </mock-styled.label>
            <mock-styled.div>
              <mock-styled.input
                id="app-edit-categories-select"
              />
              <mock-styled.div
                classname=""
              >
                <mock-styled.span
                  classname="mock-css.
  margin-left: 0.375rem;
 mock-css. mock-css.
  font-size: 1.5rem;
"
                >
                  <svg />
                </mock-styled.span>
                <p>
                  Please select one or more categories that best describes your app. These will be used by customers to find your app in the AppMarket
                </p>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.input
                  id="test-static-id"
                  type="checkbox"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="test-static-id"
                >
                  MOCK_DESCRIPTION
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.p>
              An Error
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname="mock-css."
              id="test-static-id"
              name="summary"
              placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
            />
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.5rem;
"
              style="font-size: 1rem;"
            >
              <svg
                style="font-size: 1rem;"
              />
            </mock-styled.span>
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Summary
            </mock-styled.label>
            <mock-styled.p>
              An Error
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            Description
          </mock-styled.label>
          <div />
          <mock-styled.p>
            An Error
          </mock-styled.p>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Upload Icon Image
            </mock-styled.label>
            <mock-styled.div
              classname="mock-css.
  align-items: center;
"
            >
              <mock-styled.button
                classname="mock-css.
  margin-right: 0.625rem;
 mock-css."
                type="button"
              >
                <mock-styled.div />
                Upload
              </mock-styled.button>
              <mock-styled.input
                type="file"
              />
              <mock-styled.input
                filename="MOCK_UUID"
                id="test-static-id"
              />
              <mock-styled.p
                classname="mock-css. mock-css."
              >
                Dimensions: 192px x 192px
              </mock-styled.p>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.p>
            An Error
          </mock-styled.p>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Upload Featured Image
            </mock-styled.label>
            <mock-styled.div
              classname="mock-css.
  align-items: center;
"
            >
              <mock-styled.button
                classname="mock-css.
  margin-right: 0.625rem;
 mock-css."
                type="button"
              >
                <mock-styled.div />
                Upload
              </mock-styled.button>
              <mock-styled.input
                type="file"
              />
              <mock-styled.input
                filename="MOCK_UUID"
                id="test-static-id"
              />
              <mock-styled.p
                classname="mock-css. mock-css."
              >
                Dimensions: 990px x 444px
              </mock-styled.p>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.p>
            An Error
          </mock-styled.p>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Upload Other Listing Image
            </mock-styled.label>
            <mock-styled.div
              classname="mock-css.
  align-items: center;
"
            >
              <mock-styled.button
                classname="mock-css.
  margin-right: 0.625rem;
 mock-css."
                type="button"
              >
                <mock-styled.div />
                Upload
              </mock-styled.button>
              <mock-styled.input
                type="file"
              />
              <mock-styled.input
                filename="MOCK_UUID"
                id="test-static-id"
              />
              <mock-styled.p
                classname="mock-css. mock-css."
              >
                Dimensions: 1196x x 914px
              </mock-styled.p>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.p>
            An Error
          </mock-styled.p>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Upload Other Listing Image
            </mock-styled.label>
            <mock-styled.div
              classname="mock-css.
  align-items: center;
"
            >
              <mock-styled.button
                classname="mock-css.
  margin-right: 0.625rem;
 mock-css."
                type="button"
              >
                <mock-styled.div />
                Upload
              </mock-styled.button>
              <mock-styled.input
                type="file"
              />
              <mock-styled.input
                filename="MOCK_UUID"
                id="test-static-id"
              />
              <mock-styled.p
                classname="mock-css. mock-css."
              >
                Dimensions: 1196x x 914px
              </mock-styled.p>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.p>
            An Error
          </mock-styled.p>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Upload Other Listing Image
            </mock-styled.label>
            <mock-styled.div
              classname="mock-css.
  align-items: center;
"
            >
              <mock-styled.button
                classname="mock-css.
  margin-right: 0.625rem;
 mock-css."
                type="button"
              >
                <mock-styled.div />
                Upload
              </mock-styled.button>
              <mock-styled.input
                type="file"
              />
              <mock-styled.input
                filename="MOCK_UUID"
                id="test-static-id"
              />
              <mock-styled.p
                classname="mock-css. mock-css."
              >
                Dimensions: 1196x x 914px
              </mock-styled.p>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.p>
            An Error
          </mock-styled.p>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Upload Other Listing Image
            </mock-styled.label>
            <mock-styled.div
              classname="mock-css.
  align-items: center;
"
            >
              <mock-styled.button
                classname="mock-css.
  margin-right: 0.625rem;
 mock-css."
                type="button"
              >
                <mock-styled.div />
                Upload
              </mock-styled.button>
              <mock-styled.input
                type="file"
              />
              <mock-styled.input
                filename="MOCK_UUID"
                id="test-static-id"
              />
              <mock-styled.p
                classname="mock-css. mock-css."
              >
                Dimensions: 1196x x 914px
              </mock-styled.p>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.p>
            An Error
          </mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.p
      classname="mock-css."
    >
      The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to submit your app for approval, it all needs to be completed.
    </mock-styled.p>
    <mock-styled.p
      classname="mock-css. mock-css."
    >
      For information on listing your app 
      <a>
        see here
      </a>
      . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
       
      <a>
        here.
      </a>
    </mock-styled.p>
    <mock-styled.div
      classname="mock-css."
    >
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname=""
            id="test-static-id"
            name="name"
            placeholder="The name of your app as it will appear to users"
            type="text"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Name
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname="mock-css."
            id="test-static-id"
            name="supportEmail"
            placeholder="Email for customers to contact you"
            type="email"
          />
          <mock-styled.span
            classname="mock-css. mock-css.
  font-size: 1.5rem;
"
            style="font-size: 1rem;"
          >
            <svg
              style="font-size: 1rem;"
            />
          </mock-styled.span>
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Support email
          </mock-styled.label>
          <mock-styled.p>
            An Error
          </mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname="mock-css."
            id="test-static-id"
            name="telephone"
            placeholder="Number for customers to contact you"
            type="text"
          />
          <mock-styled.span
            classname="mock-css. mock-css.
  font-size: 1.5rem;
"
            style="font-size: 1rem;"
          >
            <svg
              style="font-size: 1rem;"
            />
          </mock-styled.span>
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Telephone
          </mock-styled.label>
          <mock-styled.p>
            An Error
          </mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname="mock-css."
            id="test-static-id"
            name="homePage"
            placeholder="Your company homepage. HTTP:// or HTTPS://"
            type="text"
          />
          <mock-styled.span
            classname="mock-css. mock-css.
  font-size: 1.5rem;
"
            style="font-size: 1rem;"
          >
            <svg
              style="font-size: 1rem;"
            />
          </mock-styled.span>
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Home page
          </mock-styled.label>
          <mock-styled.p>
            An Error
          </mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname="mock-css."
            id="test-static-id"
            name="launchUri"
            placeholder="HTTPS or HTTP only for localhost"
            type="text"
          />
          <mock-styled.span
            classname="mock-css. mock-css.
  font-size: 1.5rem;
"
            style="font-size: 1rem;"
          >
            <svg
              style="font-size: 1rem;"
            />
          </mock-styled.span>
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Launch URI
          </mock-styled.label>
          <mock-styled.p>
            An Error
          </mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname="mock-css."
            id="test-static-id"
            name="termsAndConditionsUrl"
            placeholder="URL to link to your Terms and Conditions"
            type="text"
          />
          <mock-styled.span
            classname="mock-css. mock-css.
  font-size: 1.5rem;
"
            style="font-size: 1rem;"
          >
            <svg
              style="font-size: 1rem;"
            />
          </mock-styled.span>
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Terms and Conditions
          </mock-styled.label>
          <mock-styled.p>
            An Error
          </mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname="mock-css."
            id="test-static-id"
            name="privacyPolicyUrl"
            placeholder="URL to link to your Privacy Policy"
            type="text"
          />
          <mock-styled.span
            classname="mock-css. mock-css.
  font-size: 1.5rem;
"
            style="font-size: 1rem;"
          >
            <svg
              style="font-size: 1rem;"
            />
          </mock-styled.span>
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Privacy Policy
          </mock-styled.label>
          <mock-styled.p>
            An Error
          </mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname=""
            id="test-static-id"
            name="videoUrl1"
            placeholder="YouTube embed preferred or any https hosted video"
            type="text"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Getting Started Video URL
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname=""
            id="test-static-id"
            name="videoUrl2"
            placeholder="YouTube embed preferred or any https hosted video"
            type="text"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Why Use Us Video URL
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname="mock-css."
            id="test-static-id"
            name="pricingUrl"
            placeholder="URL to link to your Pricing Info"
            type="text"
          />
          <mock-styled.span
            classname="mock-css. mock-css.
  font-size: 1.5rem;
"
            style="font-size: 1rem;"
          >
            <svg
              style="font-size: 1rem;"
            />
          </mock-styled.span>
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Pricing Info
          </mock-styled.label>
          <mock-styled.p>
            An Error
          </mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname="mock-css."
            id="test-static-id"
            name="isFree"
            type="checkbox"
          />
          <mock-styled.span
            classname="mock-css. mock-css.
  font-size: 1.5rem;
"
            style="font-size: 1rem;"
          >
            <svg
              style="font-size: 1rem;"
            />
          </mock-styled.span>
          <mock-styled.label
            htmlfor="test-static-id"
          >
            This application is free
          </mock-styled.label>
          <mock-styled.p>
            An Error
          </mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname=""
            id="test-static-id"
            name="deletionProtection"
            type="checkbox"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Check to prevent app from being deleted
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            App Categories
          </mock-styled.label>
          <mock-styled.div>
            <mock-styled.input
              id="app-edit-categories-select"
            />
            <mock-styled.div
              classname=""
            >
              <mock-styled.span
                classname="mock-css.
  margin-left: 0.375rem;
 mock-css. mock-css.
  font-size: 1.5rem;
"
              >
                <svg />
              </mock-styled.span>
              <p>
                Please select one or more categories that best describes your app. These will be used by customers to find your app in the AppMarket
              </p>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.input
                id="test-static-id"
                type="checkbox"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="test-static-id"
              >
                MOCK_DESCRIPTION
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.p>
            An Error
          </mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname="mock-css."
            id="test-static-id"
            name="summary"
            placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
          />
          <mock-styled.span
            classname="mock-css. mock-css.
  font-size: 1.5rem;
"
            style="font-size: 1rem;"
          >
            <svg
              style="font-size: 1rem;"
            />
          </mock-styled.span>
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Summary
          </mock-styled.label>
          <mock-styled.p>
            An Error
          </mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.label>
          Description
        </mock-styled.label>
        <div />
        <mock-styled.p>
          An Error
        </mock-styled.p>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            Upload Icon Image
          </mock-styled.label>
          <mock-styled.div
            classname="mock-css.
  align-items: center;
"
          >
            <mock-styled.button
              classname="mock-css.
  margin-right: 0.625rem;
 mock-css."
              type="button"
            >
              <mock-styled.div />
              Upload
            </mock-styled.button>
            <mock-styled.input
              type="file"
            />
            <mock-styled.input
              filename="MOCK_UUID"
              id="test-static-id"
            />
            <mock-styled.p
              classname="mock-css. mock-css."
            >
              Dimensions: 192px x 192px
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.p>
          An Error
        </mock-styled.p>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            Upload Featured Image
          </mock-styled.label>
          <mock-styled.div
            classname="mock-css.
  align-items: center;
"
          >
            <mock-styled.button
              classname="mock-css.
  margin-right: 0.625rem;
 mock-css."
              type="button"
            >
              <mock-styled.div />
              Upload
            </mock-styled.button>
            <mock-styled.input
              type="file"
            />
            <mock-styled.input
              filename="MOCK_UUID"
              id="test-static-id"
            />
            <mock-styled.p
              classname="mock-css. mock-css."
            >
              Dimensions: 990px x 444px
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.p>
          An Error
        </mock-styled.p>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            Upload Other Listing Image
          </mock-styled.label>
          <mock-styled.div
            classname="mock-css.
  align-items: center;
"
          >
            <mock-styled.button
              classname="mock-css.
  margin-right: 0.625rem;
 mock-css."
              type="button"
            >
              <mock-styled.div />
              Upload
            </mock-styled.button>
            <mock-styled.input
              type="file"
            />
            <mock-styled.input
              filename="MOCK_UUID"
              id="test-static-id"
            />
            <mock-styled.p
              classname="mock-css. mock-css."
            >
              Dimensions: 1196x x 914px
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.p>
          An Error
        </mock-styled.p>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            Upload Other Listing Image
          </mock-styled.label>
          <mock-styled.div
            classname="mock-css.
  align-items: center;
"
          >
            <mock-styled.button
              classname="mock-css.
  margin-right: 0.625rem;
 mock-css."
              type="button"
            >
              <mock-styled.div />
              Upload
            </mock-styled.button>
            <mock-styled.input
              type="file"
            />
            <mock-styled.input
              filename="MOCK_UUID"
              id="test-static-id"
            />
            <mock-styled.p
              classname="mock-css. mock-css."
            >
              Dimensions: 1196x x 914px
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.p>
          An Error
        </mock-styled.p>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            Upload Other Listing Image
          </mock-styled.label>
          <mock-styled.div
            classname="mock-css.
  align-items: center;
"
          >
            <mock-styled.button
              classname="mock-css.
  margin-right: 0.625rem;
 mock-css."
              type="button"
            >
              <mock-styled.div />
              Upload
            </mock-styled.button>
            <mock-styled.input
              type="file"
            />
            <mock-styled.input
              filename="MOCK_UUID"
              id="test-static-id"
            />
            <mock-styled.p
              classname="mock-css. mock-css."
            >
              Dimensions: 1196x x 914px
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.p>
          An Error
        </mock-styled.p>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            Upload Other Listing Image
          </mock-styled.label>
          <mock-styled.div
            classname="mock-css.
  align-items: center;
"
          >
            <mock-styled.button
              classname="mock-css.
  margin-right: 0.625rem;
 mock-css."
              type="button"
            >
              <mock-styled.div />
              Upload
            </mock-styled.button>
            <mock-styled.input
              type="file"
            />
            <mock-styled.input
              filename="MOCK_UUID"
              id="test-static-id"
            />
            <mock-styled.p
              classname="mock-css. mock-css."
            >
              Dimensions: 1196x x 914px
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.p>
          An Error
        </mock-styled.p>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
